syntax = "proto3";
package contracts;

option csharp_namespace = "Microsoft.LocalForwarder.Library.Inputs.Contracts";

import "Telemetry.proto";

// gRPC service to transmit telemetry
service AITelemetryService {
  rpc SendTelemetryBatch (stream TelemetryBatch) returns (stream AiResponse) {}
}

message AiResponse {
}

message TelemetryBatch {
	repeated Telemetry items = 1;
}